--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch"
+    "start": "webpack --watch --config webpack.dev.js --mode=development",
+    "build": "webpack --config webpack.prod.js --mode=production"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
     "image-webpack-loader": "^6.0.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {}
 }
